tests/specs/ecosystem/lightbery/dynamic_cli/1_0_4.test
lightbery/dynamic-cli/1.0.4
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
Check file://<tmpdir>/DynamicCLI.ts
error: TS2580 [ERROR]: Cannot find name 'Buffer'.
  public simulateInput(data: Buffer): void {}
                             ~~~~~~
    at file://<tmpdir>/DynamicCLI.ts:45:30

TS2580 [ERROR]: Cannot find name 'Buffer'.
  public listen(name: 'input', callback: (key?: Buffer) => any): void;
                                                ~~~~~~
    at file://<tmpdir>/DynamicCLI.ts:54:49

TS1205 [ERROR]: Re-exporting a type when 'isolatedModules' is enabled requires using 'export type'.
export { DynamicCLI, Component, TextColor, BackgroundColor };
                     ~~~~~~~~~
    at file://<tmpdir>/DynamicCLI.ts:89:22

Found 3 errors.

